syntax = "proto3";

message KeyedElement {
  uint64 timestamp = 1;
  uint64 key = 2;
  bytes data = 3;
  // Id to help identify correct Weld module
  string task_id = 4;
}

message Element {
  uint64 timestamp = 1;
  bytes data = 2;
  // Id to help identify correct Weld module
  string task_id = 3;
}

message WindowTrigger {}

message WindowComplete {}

message WindowMessage {
  oneof payload {
    WindowTrigger trigger = 1;
    WindowComplete complete = 2;
    Element element = 3;
    KeyedElement keyed_element = 4;
  }
}

message Checkpoint {}

message Watermark {
  uint64 timestamp = 1;
}

message StreamTaskMessage {
  oneof payload {
    Element element = 1;
    KeyedElement keyed_element = 2;
    Watermark watermark = 3;
    Checkpoint checkpoint = 4;
  }
}
