syntax = "proto3";
option java_package = "kompact";

message Hello {
    string hey = 1;
}

message SnapshotRequest {
    int32 id = 1;
}

message TaskMetric {
  uint64 id = 1;
  uint64 task_avg = 2;
}

message MetricReport {
  repeated TaskMetric taskMetrics = 1;
}

message Ask {
    string askActor = 1;
    KompactAkkaMsg msg = 2;
}

message AskReply {
    string askActor = 1;
    KompactAkkaMsg msg = 2;
}

message KompactRegistration {
    string id = 1;
    KompactAkkaPath src = 2;
    KompactAkkaPath dst = 3;
}

message KompactAkkaPath {
    string path = 1;
    string ip = 2;
    int32 port = 3;
}

message KompactAkkaMsg {
    oneof payload {
        KompactRegistration kompactRegistration = 1;
        Hello hello = 2;
        Ask ask = 3;
        AskReply askReply = 4;
        SnapshotRequest snapshotRequest = 5;
    }
}

message KompactAkkaEnvelope {
    KompactAkkaPath src = 1;
    KompactAkkaPath dst = 2;
    KompactAkkaMsg msg = 3;
}
